avoid vh units on small screen to avoid ios safari nav-bars covering content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -659,14 +659,14 @@ html[data-dc-pagetype="focusgroup"] .dc-media--nav ol li.active{
       display: none;
     }
     .dc-media--list{
-      height: 100vh;
+      height: 100%;
     }    
       .dc-media--list img{
         object-fit: cover;
       }
     .dc-media{
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
     }
     .dc-item--info,
     .dc-media{
